--- a/Truffle/.env
+++ b/Truffle/.env
@@ -1,3 +1,3 @@
-SIGNER_PRIVATE_KEY = 
-T_NODE_IP = 
-B_NODE_IP = 
+SIGNER_PRIVATE_KEY = any_evm_wallet_related_private_key
+T_NODE_IP = your_vm_ip_where_T_node_is_hosted
+B_NODE_IP = your_vm_ip_where_B_node_is_hosted
