--- a/Hardhat/.env
+++ b/Hardhat/.env
@@ -1,3 +1,3 @@
 PRIVATE_KEY = any_evm_wallet_related_private_key
-T_ALASTRIA_IP = your_vm_ip_where_T_node_is_hosted
-B_ALASTRIA_IP = your_vm_ip_where_B_node_is_hosted
+T_NODE_IP = your_vm_ip_where_T_node_is_hosted
+B_NODE_IP = your_vm_ip_where_B_node_is_hosted
