--- a/Hardhat/package.json
+++ b/Hardhat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nave-portfolio",
+  "name": "smart-contracts-alastria",
   "version": "1.0.0",
   "author": "Alexander Herranz",
   "scripts": {
